--- a/src/app/basics/top/top.component.html
+++ b/src/app/basics/top/top.component.html
@@ -1,9 +1,22 @@
-<mat-grid-list cols="2" rowHeight="2:1">
+<mat-grid-list cols="2" rowHeight="1:1">
   <mat-grid-tile>
-    <mat-card>send the routine a termination</mat-card>
+    <mat-card>
+        <div><button mat-button (click)="openDialog()">Terminat your routine</button></div>
+    </mat-card>
   </mat-grid-tile>
   <mat-grid-tile>
-    <mat-card>get an alternate routine style</mat-card>
+    <mat-card>
+      <mat-form-field>
+          <mat-label>Color your fuck!</mat-label>
+          <mat-select [(value)]="selectedColor" (selectionChange)="onChange($event)" #select>
+              <ng-container *ngFor="let color of basics">
+                <mat-option *ngFor="let item of color.colors" [value]="item.value">
+                  {{item.viewValue}}
+                </mat-option>
+             </ng-container>
+          </mat-select>
+        </mat-form-field>
+    </mat-card>
   </mat-grid-tile>
 </mat-grid-list>
 
